--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "dev": "node --watch bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["ai", "telegram", "bot", "nova", "assistant"],
+  "keywords": [
+    "ai",
+    "telegram",
+    "bot",
+    "nova",
+    "assistant"
+  ],
   "author": "Jackson Alex",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0",
     "pg": "^8.11.3",
-    "dotenv": "^16.3.1",
-    "axios": "^1.6.2",
-    "uuid": "^9.0.1",
-    "node-cron": "^3.0.3"
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.15.4"
   }
 }
